--- a/bayes01.ipynb
+++ b/bayes01.ipynb
@@ -202,84 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>code</th>\n",
-       "      <th>pctChg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2010-01-04</td>\n",
-       "      <td>sh.600519</td>\n",
-       "      <td>0.0707</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010-01-05</td>\n",
-       "      <td>sh.600519</td>\n",
-       "      <td>-0.2942</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2010-01-06</td>\n",
-       "      <td>sh.600519</td>\n",
-       "      <td>-1.5817</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2010-01-07</td>\n",
-       "      <td>sh.600519</td>\n",
-       "      <td>-1.8230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2010-01-08</td>\n",
-       "      <td>sh.600519</td>\n",
-       "      <td>-1.0506</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date       code   pctChg\n",
-       "0  2010-01-04  sh.600519   0.0707\n",
-       "1  2010-01-05  sh.600519  -0.2942\n",
-       "2  2010-01-06  sh.600519  -1.5817\n",
-       "3  2010-01-07  sh.600519  -1.8230\n",
-       "4  2010-01-08  sh.600519  -1.0506"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#从baotock股票数据库获取贵州茅台（600519）在2010.01.01到2020.01.01的收益率 具体代码示例参考www.baostock.com\n",
     "maotai= bs.query_history_k_data_plus(\"sh.600519\",\n",
@@ -296,84 +221,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>code</th>\n",
-       "      <th>pctChg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2010-01-04</td>\n",
-       "      <td>sh.000300</td>\n",
-       "      <td>-1.131394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010-01-05</td>\n",
-       "      <td>sh.000300</td>\n",
-       "      <td>0.814914</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2010-01-06</td>\n",
-       "      <td>sh.000300</td>\n",
-       "      <td>-0.626004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2010-01-07</td>\n",
-       "      <td>sh.000300</td>\n",
-       "      <td>-1.984089</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2010-01-08</td>\n",
-       "      <td>sh.000300</td>\n",
-       "      <td>0.249861</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date       code     pctChg\n",
-       "0  2010-01-04  sh.000300  -1.131394\n",
-       "1  2010-01-05  sh.000300   0.814914\n",
-       "2  2010-01-06  sh.000300  -0.626004\n",
-       "3  2010-01-07  sh.000300  -1.984089\n",
-       "4  2010-01-08  sh.000300   0.249861"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#获取沪深300指数在相同窗口期的收益率\n",
     "hs300= bs.query_history_k_data_plus(\"sh.000300\",\n",
@@ -390,84 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>maotai_pctChg</th>\n",
-       "      <th>hs_300_pctChg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2010-01-04</td>\n",
-       "      <td>0.0707</td>\n",
-       "      <td>-1.131394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010-01-05</td>\n",
-       "      <td>-0.2942</td>\n",
-       "      <td>0.814914</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2010-01-06</td>\n",
-       "      <td>-1.5817</td>\n",
-       "      <td>-0.626004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2010-01-07</td>\n",
-       "      <td>-1.8230</td>\n",
-       "      <td>-1.984089</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2010-01-08</td>\n",
-       "      <td>-1.0506</td>\n",
-       "      <td>0.249861</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date  maotai_pctChg  hs_300_pctChg\n",
-       "0  2010-01-04         0.0707      -1.131394\n",
-       "1  2010-01-05        -0.2942       0.814914\n",
-       "2  2010-01-06        -1.5817      -0.626004\n",
-       "3  2010-01-07        -1.8230      -1.984089\n",
-       "4  2010-01-08        -1.0506       0.249861"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#在得到上面的数据之后我们需要将贵州茅台和沪深300按照日期一一匹配他们的日收益率\n",
     "def pair_data(maotai,hs300):\n",
@@ -484,18 +259,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'same_rise': 862, 'same_fall': 802, 'different': 756, 'total': 2420}\n",
-      "2431\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#这里通过一个一个对比的方式，找出同涨同跌的天数，以及涨跌不同的天数\n",
     "def count(pair_data):\n",
@@ -515,16 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'rise': 0.09397307219452225}"
+       "{'rise': 0.6934835076427996, 'fall': 0.6750841750841752}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,10 +304,16 @@
     "#当有了新的信息被获得，那么就可以把原来的后验概率作为先验概率有用新的信息进行一次再决策\n",
     "def bayes(count,pair_data):\n",
     "    bayes={}\n",
-    "    p_mt=len(pair_data.query('maotai_pctChg>0'))/count['total']\n",
-    "    p_300_mt=count['same_rise']/count['total']\n",
-    "    p_300=len(pair_data.query('hs_300_pctChg>0'))/count['total']\n",
-    "    bayes['rise']=p_mt*p_300_mt*p_300\n",
+    "    #计算当沪深300上涨的时候贵州茅台上涨的概率\n",
+    "    p_mt_rise=len(pair_data.query('maotai_pctChg>0'))/count['total']\n",
+    "    p_300_mt_rise=count['same_rise']/len(pair_data.query('maotai_pctChg>0'))\n",
+    "    p_300_rise=len(pair_data.query('hs_300_pctChg>0'))/count['total']\n",
+    "    bayes['rise']=p_mt_rise*p_300_mt_rise/p_300_rise\n",
+    "    #计算当沪深300下跌的时候，贵州茅台下跌的概率\n",
+    "    p_mt_fall=len(pair_data.query('maotai_pctChg<0'))/count['total']\n",
+    "    p_300_mt_fall=count['same_fall']/len(pair_data.query('maotai_pctChg<0'))\n",
+    "    p_300_fall=len(pair_data.query('hs_300_pctChg<0'))/count['total']\n",
+    "    bayes['fall']=p_mt_fall*p_300_mt_fall/p_300_fall\n",
     "    return bayes\n",
     "bayes(count,pair_data)"
    ]
@@ -579,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +380,7 @@
        "[0.8, 0.44444444444444453, 0.13793103448275867, 0.03100775193798451]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +406,7 @@
        "[0.03, 0.13392857142857142, 0.4360465116279069, 0.7944915254237288]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
